# rust-service-example

./: Cargo.toml  NOTES.md  rustfmt.toml
src/: main.rs  provider.rs  response.rs  service.rs  telemetry.rs
src/http/: mod.rs
src/in_memory/: mod.rs
src/kernel/: mod.rs
src/repository/: mod.rs
src/usecases/: mod.rs
